--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,12 @@
     "plugin:import/electron",
     "plugin:import/typescript"
   ],
+  "settings": {
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true
+      }
+    }
+  },
   "parser": "@typescript-eslint/parser"
 }
