--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "autoprefixer": "^10.4.20",
     "electron": "34.0.1",
     "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.25.0",
+    "eslint-import-resolver-typescript": "^3.8.0",
+    "eslint-plugin-import": "^2.31.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.0.0",
@@ -48,18 +49,25 @@
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.1.7",
     "axios": "^1.7.9",
     "calendar-link": "^2.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "electron-squirrel-startup": "^1.0.1",
+    "fuse.js": "^7.1.0",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.474.0",
     "p-limit": "^6.2.0",
     "react": "^18.3.1",
+    "react-aria-components": "^1.11.0",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.3",
     "tailwind-merge": "^2.6.0",
